--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -198,9 +198,11 @@ body.page-admin .region-footer .block,
 body.page-admin .region-footer table {
   border: 0px; }
 
-body.node-unpublished #block-system-main {
-  background: pink;
-  border: 1px solid red; }
+.unpublished {
+  color: red;
+  text-align: center;
+  margin-bottom: 0px;
+  margin-top: 0px; }
 
 .help-page,
 div.comment,
