Fix featured image sizing

--- a/sass/press-release-nodes.scss
+++ b/sass/press-release-nodes.scss
@@ -26,6 +26,10 @@
         text-align: center;
     }
 
+    .field-name-field-featured-image img {
+        width: 100%;
+    }
+
     .content-main {
         margin: 0 auto 40px auto;
     }
