--- a/css/press-release-nodes.css
+++ b/css/press-release-nodes.css
@@ -30,6 +30,10 @@
   text-align: center;
 }
 
+.node-type-press-release.panelized-node .field-name-field-featured-image img {
+  width: 100%;
+}
+
 .node-type-press-release.panelized-node .content-main {
   margin: 0 auto 40px auto;
 }
