--- a/css/print.css
+++ b/css/print.css
@@ -80,6 +80,11 @@ img.print-logo {
   display: inline;
 }
 
+.print-content {
+  max-width: 1024px;
+  margin: auto;
+}
+
 .print-hr {
   border: 0;
   height: 1px;
