--- a/css/print.css
+++ b/css/print.css
@@ -110,6 +110,22 @@ img.print-logo {
   text-align: center;
 }
 
+.node-type-press-release.panelized-node.print-version h1 {
+  line-height: 36px;
+  margin: 24px 0;
+}
+
+.node-type-press-release.panelized-node.print-version h2 {
+  line-height: 32px;
+  margin: 24px 0;
+}
+
+.node-type-press-release.panelized-node.print-version p {
+  font-size: 18px;
+  line-height: 24px;
+  margin: 24px 0;
+}
+
 .node-type-press-release.panelized-node.print-version .rtecenter {
   text-align: center;
 }
@@ -140,8 +156,9 @@ img.print-logo {
 
 .node-type-press-release.panelized-node.print-version .field-name-field-featured-image {
   margin: 0 1em 1em 0;
-  width: 50%;
   float: left;
+  width: 50%;
+  max-width: 360px;
 }
 
 .node-type-press-release.panelized-node.print-version .field-name-field-featured-image img {
